-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 26
-
Component/s: core-libs
-
b03
NET_ThrowNew maps EINTR to InterruptedIOException. This is likely a left over from legacy interruptible I/O that was Solaris only and long removed.
The use of NET_ThrowNew in Inet4AddressImpl.c + Inet6AddressImpl.c need to re-examined to see that any interruptible syscalls are handling EINTR correctly, they should not be calling NET_ThrowNew for the EINTR case.
The use of NET_ThrowNew in Inet4AddressImpl.c + Inet6AddressImpl.c need to re-examined to see that any interruptible syscalls are handling EINTR correctly, they should not be calling NET_ThrowNew for the EINTR case.
- links to
-
Commit(master)
openjdk/jdk/4924b29f
-
Review(master)
openjdk/jdk/28750