8370655: Check EINTR handling InetAddress implementation and NET_ThrowNew

Reviewed-by: alanb